[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/MouseNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/DrawGame.gd" type="Script" id=2]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.98895, 1 )
colors = PoolColorArray( 0, 1, 0.0627451, 1, 0.968627, 0, 1, 1, 0.811765, 0.168627, 0.168627, 1 )

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="CircleShape2D" id=2]
radius = 260.0

[node name="Node2D" type="Node2D"]
position = Vector2( 787.556, 400.452 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -451.0
margin_top = -340.0
margin_right = 435.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Line2D" parent="."]
default_color = Color( 1, 0, 0.960784, 1 )
gradient = SubResource( 3 )

[node name="CircleTest" type="Node2D" parent="."]

[node name="OuterShape" type="Area2D" parent="CircleTest"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CircleTest/OuterShape"]
shape = SubResource( 1 )

[node name="InnerShape" type="Area2D" parent="CircleTest"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CircleTest/InnerShape"]
shape = SubResource( 2 )

[node name="MouseNode" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -396.253, 290.639 )

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_ColorRect_mouse_exited"]
